// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Biz Ops Links <BizOpsLink /> Display a fully specified link 1`] = `
<a href="/System/a-code">a-name</a>
<span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
<span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
`;

exports[`Biz Ops Links <BizOpsLink /> Display a link with no code 1`] = `"Error: unable to construct link"`;

exports[`Biz Ops Links <BizOpsLink /> Display a link with no code or name 1`] = `"Error: unable to construct link"`;

exports[`Biz Ops Links <BizOpsLink /> Display a link with no name 1`] = `
<a href="/System/a-code">a-code</a>
<span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
<span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
`;

exports[`Biz Ops Links <BizOpsLinks /> Display a fully specified list 1`] = `
<ul class="o-layout__unstyled-element biz-ops-links">
  <li class="active">
    <a href="/System/code01">name01</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code02">name02</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code03">name03</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code04">name04</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code05">name05</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
</ul>
`;

exports[`Biz Ops Links <BizOpsLinks /> Display a link with no label 1`] = `
<ul class="o-layout__unstyled-element biz-ops-links">
  <li class="active">
    <a href="/System/code01">name01</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code02">name02</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code03">name03</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code04">name04</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
  <li class="active">
    <a href="/System/code05">name05</a>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown service tier</span>
    <span class="o-layout--unstyled-element o-labels o-labels--unknown">Unknown lifecycle stage</span>
  </li>
</ul>
`;

exports[`Biz Ops Links <BizOpsLinks /> Display a link with no list 1`] = `"Error: unable to construct links"`;

exports[`Biz Ops Links <BizOpsLinks /> Display a link with no list content 1`] = `"Error: unable to construct links"`;
